# enscons-soar

./: SConstruct  pyproject.toml
.github/workflows/: upload-pypi-source.yml
docs/: index.md
enscons/: SConstruct.in  __init__.py  api.py  cli.py  cpyext.py  paths.py  setup2toml.py  util.py
