[project]
name = "enscons"
description = "Tools for building Python packages with SCons"
version = "0.28.0"

authors = [{ name = "Daniel Holth", email = "dholth@fastmail.fm" }]
classifiers = [
  "Programming Language :: Python :: 3",
]
python_requires = ">=3.8"
dependencies = [
  "scons>=3.0.5",
  "toml>=0.1",
  "setuptools",
  "wheel",
  "attrs",
  "click",
  "packaging>=20.9",
  "editables==0.5",
]
keywords = ["packaging", "wheel"]
license = "MIT"
packages = ["enscons"]
readme = "README.rst"
src_root = "."
url = "https://github.com/dholth/enscons"

[project.optional-dependencies]
cli = ["click"]
docs = ["furo", "sphinx", "myst-parser", "mdit-py-plugins>=0.3.0"]

[project.scripts]
setup2toml = "enscons.setup2toml:main"

[build-system]
build-backend = "enscons.api"
backend-path = ["."] # only for bootstrapped enscons
requires = [
  "scons>=3.0.5",
  "toml>=0.1",
  "setuptools",
  "wheel",
  "attrs",
  "click",
  "packaging>=20.9",
  "editables==0.5",
] # enscons users add "enscons>=0.28" to this list
